package com.example.tiptime

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.hamcrest.Matchers.containsString
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class CalculatorTests {
    //launch MainActivity
    @get:Rule()
    val activity = ActivityScenarioRule(MainActivity::class.java)

    @Test
    fun calculate_default_tip() {
        //enter value in the edit text
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.00"))
        //click calculate button
        onView(withId(R.id.calculate_button)).perform(click())
        //confirm if tip result matches $10
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("10.00"))))
        //confirm if total amount matches $60
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("60.00"))))
    }

    @Test
    fun calculate_default_tip_no_round_up() {
        //enter 50.67 in the edit text
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.67"))
        //click the switch button
        onView(withId(R.id.round_up_switch))
            .perform(click())
        //click calculate button
        onView(withId(R.id.calculate_button)).perform(click())
        //confirm if tip result matches $10.13
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("10.13"))))
        //confirm if total amount matches $60.8
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("60.8"))))
    }

    @Test
    fun calculate_18_percent_tip() {
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.00"))
        onView(withId(R.id.option_eighteen_percent))
            .perform(click())
        onView(withId(R.id.calculate_button))
            .perform(click())
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("$9.00"))))
        //confirm if total amount matches $59
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("59.00"))))
    }

    @Test
    fun calculate_18_percent_tip_no_round_up() {
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.67"))
        onView(withId(R.id.option_eighteen_percent))
            .perform(click())
        onView(withId(R.id.round_up_switch))
            .perform(click())
        onView(withId(R.id.calculate_button))
            .perform(click())
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("$9.12"))))
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("59.79"))))
    }

    @Test
    fun calculate_15_percent_tip() {
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.00"))
        onView(withId(R.id.option_fifteen_percent))
            .perform(click())
        onView(withId(R.id.calculate_button))
            .perform(click())
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("$8.00"))))
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("58.00"))))
    }

    @Test
    fun calculate_15_percent_tip_no_round_up() {
        onView(withId(R.id.cost_of_service_edit_text))
            .perform(typeText("50.67"))
        onView(withId(R.id.option_fifteen_percent))
            .perform(click())
        onView(withId(R.id.round_up_switch))
            .perform(click())
        onView(withId(R.id.calculate_button))
            .perform(click())
        onView(withId(R.id.tip_result))
            .check(matches(withText(containsString("$7.60"))))
        onView(withId(R.id.total_amount))
            .check(matches(withText(containsString("58.27"))))
    }

}

